Cambios para mejora de extraer datos Json
